# villa_manipulation

./: CMakeLists.txt  README.md  package.xml  tags
action/: EE_Control.action  ForcePutDown.action  Move_Ik.action  PickUp.action  PickUpCutlery.action  PickUpPlate.action  PutDown.action  PutDownDishwasher.action
include/villa_manipulation/: manipulator.h  sensor_capture.h  transform_utils.h
launch/: detector.launch  grab_bag.launch  hri.launch  open_door_task.launch  perception.launch  villa_manipulation_simple_world.launch
scripts/: frames.gv  givepose_actionserver.py  givepose_client.py  handover_actionserver.py  handover_activity.py  handover_tester.py  headtracking_actionserver.py  homepose_actionserver.py  homepose_client.py  moveit_ik_actionserver.py  odh_l_pull.py  odh_l_push.py  odh_r_pull.py  odh_r_push.py  open_dishwasher.py  open_gripper.py  open_knobdoor_miguel.py  open_knobdoor_service.py  open_refdoor_service.py  putdown_actionserver.py  putdown_client.py  receivepose_actionserver.py  receivepose_client.py  wrist_tap_client  wrist_tap_server
src/: AlignRobotToSurface.h  TODO  force_sensor_test.cpp  grasp_executor.cpp  grasp_server.cpp  hsrb_wrapper_tester.cpp  manipulation_controller.cpp  manipulation_controller.h  sensor_capture.h  simple_collision_check.cpp  transform_utils.cpp
src/libvilla_hsrb/: manipulator.cpp
srv/: GetHandPositions.srv
worlds/: empty_world_object_on_table.world  empty_world_with_small_objects.world
